--- a/style.css
+++ b/style.css
@@ -106,6 +106,9 @@ header .overlay {
   font-size: 20px;
 }
 
+#home-search .date {
+  display: inline-flex;
+}
 #home-search {
   width: 50%;
 }
@@ -138,7 +141,7 @@ header .overlay {
 main {
   padding: 10px;
   text-align: center;
-  height: 380vh;
+  height: 340vh;
   margin-top: 2%;
 }
 
@@ -276,6 +279,12 @@ main section .review {
 }
 
 footer {
-  height: 80vh;
+  height: 70vh;
   display: inline-flex;
+  background-image: url(images/Footer.png);
+}
+
+footer img {
+  height: 100%;
+  width: 100%;
 }
